--- a/app/src/main/res/layout/fragment_create_event.xml
+++ b/app/src/main/res/layout/fragment_create_event.xml
@@ -24,7 +24,7 @@
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/editText_Nom"
+                android:id="@+id/editText_NomEvent"
                 android:inputType="textPersonName"
                 android:hint="Nom Evenement"/>
         </android.support.design.widget.TextInputLayout>
@@ -56,7 +56,7 @@
                 android:layout_weight="1" />
 
             <Button
-                android:text="Time"
+                android:text="Heure"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:id="@+id/button_Time"
@@ -72,7 +72,7 @@
                 android:text="Evenement Privé"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:id="@+id/checkBox"
+                android:id="@+id/checkBox_privateEvent"
                 android:layout_weight="1" />
 
             <Button
@@ -94,7 +94,15 @@
                 android:id="@+id/editText_Description"
                 android:inputType="textMultiLine"
                 android:hint="Description"/>
+
         </android.support.design.widget.TextInputLayout>
+
+        <Button
+            android:text="Créer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/btn_createEvent"
+            android:layout_weight="0.33" />
     </LinearLayout>
 
 </LinearLayout>
