--- a/app/src/main/res/layout/fragment_create_event.xml
+++ b/app/src/main/res/layout/fragment_create_event.xml
@@ -1,4 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -15,6 +16,13 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:srcCompat="@mipmap/ic_launcher"
+            android:id="@+id/imageViewPhoto"
+            android:layout_weight="2"/>
 
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
@@ -73,13 +81,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:id="@+id/checkBox"
-                android:layout_weight="1" />
-
-            <Button
-                android:text="Photo"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/button_Photo"
                 android:layout_weight="1" />
         </LinearLayout>
 
