--- a/app/src/main/res/layout/fragment_event.xml
+++ b/app/src/main/res/layout/fragment_event.xml
@@ -14,33 +14,37 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <LinearLayout
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:background="@mipmap/ic_launcher"
-            android:orientation="vertical">
+            android:layout_height="wrap_content">
 
-
-            <TextView
-                android:text="Titre"
-                android:textStyle="bold"
-                android:textSize="25dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/textView_Title"
-                android:layout_weight="1" />
-
-            <TextView
-                android:text="Date et heure"
-                android:textStyle="bold"
-                android:textSize="20dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/textView_Date"
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
                 android:layout_weight="1"
-                android:gravity="bottom"/>
-        </LinearLayout>
+                android:orientation="vertical">
+
+
+                <TextView
+                    android:text="Titre"
+                    android:textStyle="bold"
+                    android:textSize="25dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView_Title"
+                    android:layout_weight="1" />
+
+                <TextView
+                    android:text="Date et heure"
+                    android:textStyle="bold"
+                    android:textSize="20dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView_Date"
+                    android:layout_weight="1"
+                    android:gravity="bottom"/>
+            </LinearLayout>
+        </FrameLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
