--- a/app/src/main/res/layout/fragment_create_event.xml
+++ b/app/src/main/res/layout/fragment_create_event.xml
@@ -1,4 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,10 +12,14 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_height="match_parent">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:srcCompat="@mipmap/ic_launcher"
+            android:id="@+id/imageViewPhoto"
+            android:layout_weight="2"/>
 
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
@@ -23,7 +28,7 @@
 
             <EditText
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:id="@+id/editText_NomEvent"
                 android:inputType="textPersonName"
                 android:hint="Nom Evenement"/>
@@ -36,7 +41,7 @@
 
             <EditText
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:id="@+id/editText_Lieux"
                 android:inputType="textPersonName"
                 android:hint="Lieu"/>
@@ -56,7 +61,7 @@
                 android:layout_weight="1" />
 
             <Button
-                android:text="Heure"
+                android:text="Time"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:id="@+id/button_Time"
@@ -74,13 +79,6 @@
                 android:layout_height="match_parent"
                 android:id="@+id/checkBox_privateEvent"
                 android:layout_weight="1" />
-
-            <Button
-                android:text="Photo"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/button_Photo"
-                android:layout_weight="1" />
         </LinearLayout>
 
         <android.support.design.widget.TextInputLayout
@@ -94,8 +92,8 @@
                 android:id="@+id/editText_Description"
                 android:inputType="textMultiLine"
                 android:hint="Description"/>
-
         </android.support.design.widget.TextInputLayout>
+
 
         <Button
             android:text="Créer"
