--- a/app/src/main/res/layout/fragment_event.xml
+++ b/app/src/main/res/layout/fragment_event.xml
@@ -43,7 +43,7 @@
                 <ListView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:id="@+id/List_Friends" />
+                    android:id="@+id/List_Participants"/>
             </LinearLayout>
 
             <LinearLayout
@@ -70,7 +70,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:src="@android:drawable/ic_menu_send"
-                        android:id="@+id/image_Send"
+                        android:id="@+id/image_SendComment"
                         android:layout_weight="6"/>
 
                 </LinearLayout>
