--- a/app/src/main/res/layout/fragment_event.xml
+++ b/app/src/main/res/layout/fragment_event.xml
@@ -4,10 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingLeft="3dp"
+    android:paddingRight="10dp"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.student.gestionevenements.Event">
+    tools:context="com.example.valentin.desu.EventFragment">
 
     <LinearLayout
         android:orientation="vertical"
@@ -43,7 +43,8 @@
                 <ListView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:id="@+id/List_Participants"/>
+                    android:id="@+id/List_Participants"
+                    android:layout_marginRight="5dp" />
             </LinearLayout>
 
             <LinearLayout
